fix dark mode input background on iOS Safari

--- a/static/base.css
+++ b/static/base.css
@@ -141,6 +141,7 @@ table {
 
 @media (prefers-color-scheme: dark) {
   :root {
+    color-scheme: dark;
     --bg: #333840;
     --text: #ccc;
     --text-muted: #777;
